--- a/src/index.css
+++ b/src/index.css
@@ -553,10 +553,12 @@
 
   .red_border {
     /* background: #ff6b6b1c !important; */
-    background: white !important;
-    border: 1px solid #ff6b6b !important;
+    background: #1f749417 !important;
+    /* border: 1px solid #ff6b6b !important; */
   }
 
   .green_border {
-    background: #1f749417 !important;
+    background: white !important;
+    border: 1px solid rgba(0, 128, 0, 0.397) !important;
+
   }
